i fixed my error

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <h1>
-    hello world! My name is Artem 
+    hello world! 
   </h1>
+  <h2>
+    My name is Artem 
+  </h2>
   
 </body>
 </html>
